.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:08:15 **** Incremental Build of configuration Debug for project Queues ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Queues.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ACER\Documents\GitHub\FreeRTOS-on-STM32\Queues\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Queues.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Queues.elf
 
arm-none-eabi-size  Queues.elf 
arm-none-eabi-objdump -h -S Queues.elf  > "Queues.list"
   text	   data	    bss	    dec	    hex	filename
  26460	    116	  20980	  47556	   b9c4	Queues.elf
Finished building: default.size.stdout
 
Finished building: Queues.list
 
18:09:08 **** Incremental Build of configuration Debug for project Queues ****
make -j8 all 
arm-none-eabi-size  Queues.elf 
   text	   data	    bss	    dec	    hex	filename
  26460	    116	  20980	  47556	   b9c4	Queues.elf
Finished building: default.size.stdout
 
18:10:03 **** Incremental Build of configuration Debug for project Queues ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Queues.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ACER\Documents\GitHub\FreeRTOS-on-STM32\Queues\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Queues.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Queues.elf
 
arm-none-eabi-size  Queues.elf 
arm-none-eabi-objdump -h -S Queues.elf  > "Queues.list"
   text	   data	    bss	    dec	    hex	filename
  26464	    116	  20980	  47560	   b9c8	Queues.elf
Finished building: default.size.stdout
 
Finished building: Queues.list
 
18:15:38 **** Incremental Build of configuration Debug for project Queues ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'StartReceiver':
../Core/Src/main.c:312:11: error: 'error_state' undeclared (first use in this function); did you mean 'error_status'?
  312 |           error_state = osMessageQueueGet(Queue1Handle, &res, NULL, 2000);
      |           ^~~~~~~~~~~
      |           error_status
../Core/Src/main.c:312:11: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
18:15:52 **** Incremental Build of configuration Debug for project Queues ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Queues.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ACER\Documents\GitHub\FreeRTOS-on-STM32\Queues\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Queues.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Queues.elf
 
arm-none-eabi-size  Queues.elf 
arm-none-eabi-objdump -h -S Queues.elf  > "Queues.list"
   text	   data	    bss	    dec	    hex	filename
  26480	    116	  20988	  47584	   b9e0	Queues.elf
Finished building: default.size.stdout
 
Finished building: Queues.list
 
18:18:02 **** Incremental Build of configuration Debug for project Queues ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Queues.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ACER\Documents\GitHub\FreeRTOS-on-STM32\Queues\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Queues.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Queues.elf
 
arm-none-eabi-size  Queues.elf 
arm-none-eabi-objdump -h -S Queues.elf  > "Queues.list"
   text	   data	    bss	    dec	    hex	filename
  26480	    116	  20988	  47584	   b9e0	Queues.elf
Finished building: default.size.stdout
 
Finished building: Queues.list
 
18:19:29 **** Incremental Build of configuration Debug for project Queues ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc -o "Queues.elf" @"objects.list"   -mcpu=cortex-m4 -T"C:\Users\ACER\Documents\GitHub\FreeRTOS-on-STM32\Queues\STM32F411RETX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Queues.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
Finished building target: Queues.elf
 
arm-none-eabi-size  Queues.elf 
arm-none-eabi-objdump -h -S Queues.elf  > "Queues.list"
   text	   data	    bss	    dec	    hex	filename
  26480	    116	  20988	  47584	   b9e0	Queues.elf
Finished building: default.size.stdout
 
Finished building: Queues.list
 
